# Dicom-Tools-py

./: .gitattributes  .gitignore  INSTALLATION.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
DICOM_reencoder/: __init__.py  anonymize_dicom.py  batch_process.py  cli.py  comparar_dicom.py  convert_to_image.py  decompress_dicom.py  dicom_echo.py  dicom_info.py  dicom_query.py  dicom_retrieve.py  extract_metadata.py  modify_tags.py  organize_dicom.py  pixel_stats.py  reencode_dicom.py  search_dicom.py  series_to_nifti.py  split_multiframe.py  transcode_dicom.py  validate_dicom.py  volume_builder.py  web_interface.py
DICOM_reencoder/core/: __init__.py  datasets.py  factories.py  images.py  metadata.py  network.py
DICOM_reencoder/web_static/: app.js  style.css
DICOM_reencoder/web_templates/: index.html
tests/: conftest.py  test_dicom_numpy.py  test_gdcm.py  test_pydicom.py  test_pynetdicom.py  test_simpleitk.py
